--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,14 +19,15 @@ h1{
 }
 .links{
 float: right;
-display: inline-flex;
-flex-direction: row;
+display: inline;
 }
 #top{
 display: flex;
 flex-direction: row;
 padding-top: 100px;
 margin-top: 100px;
+padding-left: 100px;
+padding-right: 100px;
 }
 .items{
 margin-right: 100px;
