--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,29 @@
 *{
     
-    background-color: bisque;
+    background-color:bisque;
     margin: 0%;
     padding: 0%;
     font-family: Arial, Helvetica, sans-serif;
-    font-style: italic;
+    font-style: normal;
 }
 #pop{
-    background-image: url(./images/13.jpg);
+    background-image: url("./images/8.jpg");
+    height: 500px;
+    width: 1200px;
+    margin-left: 100px;
+    margin-right: 100px;
     font-style: oblique;
     align-items: center;
     text-align: center;
-}
- #pop > header{ 
-     font-weight: 900;
-     font-size: larger;
+    text-decoration: wavy;
 
-}
-#pop > h1{
-    font-weight: 700;
-    font-size: larger;
 }
 
 #pop > .links > ul > li{
 float: right;
 display: inline-flex;
 padding-right: 30px;
+
 }
 
 #top{
@@ -33,14 +31,38 @@ display: flex;
 flex-direction: row;
 padding-top: 100px;
 margin-top: 100px;
-padding-left: 100px;
+padding-left: 120px;
 padding-right: 100px;
 }
 .items{
-margin-right: 100px;
+    margin-right: 100px;
+    
+    }
+    .chefs{
+    margin-right: 100px;
+    }
+    #btn1{
+        margin-bottom: 20px;
+        margin-left: 80px;
+    }
+    #btn2{
+        margin-bottom: 20px;
+        margin-left: 80px;
+    }
+    #btn3{
+    margin-bottom: 20px;
+    margin-left: 80px;
+    }
+    .items > p1{
+        margin-bottom: 30px;
+    
+    } 
+    .chefs > p2{
 
+    margin-bottom: 30px;
+    
 }
-.chefs{
-margin-right: 100px;
-}
-
+     .cheffings > p3{  
+        margin-bottom: 30px;
+        
+    }
