--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,24 @@
 html{
 background-image: url(./images/2.jpg);
 background-size: cover;
+height: 280px;width: auto;
 background-repeat: no-repeat;
-background-attachment: fixed;  
+background-attachment: scroll;  
 font-size:62.5%;
 overflow-x:hidden;
-scroll-padding-top:5.5rem;
+scroll-behavior: smooth;
+}
+.input{
+    text-align: center;
+input[type="text"]
+{
+height: 50px;
+width: 600px;
+background: #e7e7e7;
 
+font-size 20px;
+border:none;
+border-radius:2opx;  }
 }
 section:nth-child(even){
     background: #eee;
@@ -112,24 +124,6 @@ align-items: center;
 justify-content:space-between;
 box-shadow: var(--box-shadow);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 header .navbar a{
     font-size: 1.7rem;
     border-radius: .5rem;
@@ -146,9 +140,22 @@ header .navbar a:hover{
     background: var(--green);
 
 }
+#img1{
+    position: relative;
+}
+#home{
+    padding-top: 200px;
+    padding-bottom: 0%;}
+    #services{
+padding-top:300px
+    }
+    #services > h1{
+        padding-left: 50px;
+    }
+}
 
 .order{
-    margin-top: 50px;
+    margin-top: 0px;
 }
 
 .order .{
@@ -158,22 +165,21 @@ header .navbar a:hover{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 20px 100px;
+	
 }
 .order .order:after{
 	content: '';
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	left: 0;
-	top: 0;
-	background: url("../img/bg.jpg") no-repeat center;
-	background-size: cover;
-	filter: blur(50px);
-	z-index: -1;
+	left: 100px;
+	top: 20px;
+
+	
+	
 }
 .order .order-box{
-	max-width: 850px;
+	max-width: 50px;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	justify-content: center;
@@ -245,6 +251,9 @@ header .navbar a:hover{
 
 order.btn:hover{
     background-color: #27ae60;
+    background-size: 20px;
+    height: 10pc;
+    width: 50pc;
 }
 
 .order.field:focus{
