--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,27 +11,49 @@
 }
     
 html{
-background-image: url(./images/2.jpg);
+background-image: url(./images/19.jpg);
 background-size: cover;
 height: 280px;width: auto;
 background-repeat: no-repeat;
-background-attachment: scroll;  
+background-attachment: scroll; 
 font-size:62.5%;
 overflow-x:hidden;
 scroll-behavior: smooth;
-}
-.input{
-    text-align: center;
-input[type="text"]
-{
-height: 50px;
-width: 600px;
-background: #e7e7e7;
 
-font-size 20px;
-border:none;
-border-radius:2opx;  }
+/* Needed to position the navbar */
+position: relative;
 }
+
+
+
+/* The navbar */
+.navbar{
+    overflow: hidden;
+    background-color:lightgray;
+    margin-top: 10px;
+    top: 20px;
+    left: 2px;
+  }
+  
+  /* Navbar links */
+  .navbar {
+    float: right;
+    color: #ddd;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    padding-left: 80px;
+  }
+  
+  .navbar:hover {
+    background-color: #ddd;
+    
+  }
+
+
+
+
 section:nth-child(even){
     background: #eee;
 }
@@ -47,18 +69,21 @@ section:nth-child(even){
     cursor:pointer;
     padding:8rem 3rem;
 }
- .logo {
+ .logo {background-image: ;
     color:var(--green);
-    font-size: 4.6rem;
-    background-color:bisque;
-    float: left;
-    text-decoration: #27ae60;
+    font-size: 2.6rem;
+    background-color:none;
+    float: start left;
+    top: 0%;
+    left: 0%;
+    margin-bottom: 100px;
 }
 .navbar {
     font-size: 1.7rem;
     border-radius: .5rem;
-    padding: .5rem 1.5rem;
+    padding: .3rem 1.5rem;
     color: var(--light-colour)
+    
     }
 
 header .navbar a,
@@ -70,6 +95,7 @@ header .navbar a{
     outline: none;border:none;
     text-transform: capitalize;
     transition: all .2s linear;
+    
 }
 html{
     
@@ -81,18 +107,28 @@ scroll-padding-top:5.5rem;
 section:nth-child(even){
     background: #eee;
 }
-.sub-heading{
+#pop  > heading{
     text-align: center;
-    color:var(--green);
-    font-size: 2rem;
-    padding-top: 1rem;
+    font-size: xx-large;
+    color:#CD9B1B;
+	-webkit-text-stroke: 1px black;}
+.home{
+margin-top:680px
+
 }
-.heading{
-    text-align: center;
-    color: var(--black);
-    font-size: 3rem;
-    padding-bottom: 2rem;
-    text-transform: uppercase;
+
+
+
+
+
+
+
+
+
+
+.services{
+    position: relative;
+    top: -125px;
 }
 .btn{
     margin: top 1rem;
@@ -146,124 +182,154 @@ header .navbar a:hover{
 #home{
     padding-top: 200px;
     padding-bottom: 0%;}
+#home p{
+    text-align:center;
+	color:rgb(2, 1, 1);
+	-webkit-text-stroke: black;
+    font-size: medium;
+    padding-right: 50px;
+    font-size: 4rem;
+
+}
+
     #services{
-padding-top:300px
+padding-top:300px;}
+#services img{
+    border-radius: 40px;
+}
     }
-    #services > h1{
+    #services  h1{
         padding-left: 50px;
+        font-size: 4rem;
     }
 
-.order{
-    margin-top: 0px;
-}
+	<style>
+		body {
+			height: 100%;
+			font-family: Arial, sans-serif;
+		}
+		
+		* {
+			box-sizing: border-box;
+		}
+		
+		h1 {
+			text-align:center;
+			color:black
+			-webkit-text-stroke: 1px black;
 
-.order {
-	position: fixed;
-	width: auto;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	
-}
-.order .order:after{
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	left: 100px;
-	top: 20px;
-
-	
-	
-}
-.order .order-box{
-	max-width: 50px;
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	background-color: #fff;
-	box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
-    float:right;
-}
-
-.order .left{
-	background: url("../img/bg.jpg") no-repeat center;
-	background-size: cover;
-	height: 100%;
-}
-
-.order .right{
-	padding: 25px 40px;
-}
-
-.order h2{
-	position: relative;
-	padding: 0 0 10px;
-	margin-bottom: 10px;
-}
-
-.order:focus h2:after{
-	content: '';
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    height: 4px;
-    width: 50px;
-    border-radius: 2px;
-    background-color: #CD9B1B;
-}
-
-.order .field{
-	width: 100%;
-	border: 2px solid rgba(0, 0, 0, 0);
-	outline: none;
-	background-color: rgba(230, 230, 230, 0.6);
-	padding: 0.5rem 1rem;
-	font-size: 1.1rem;
-	margin-bottom: 22px;
-	transition: .3s;
-}
-
-.order .field:hover{
-	background-color: rgba(0, 0, 0, 0.1);
-}
-
-.order textarea{
-	min-height: 150px;
-}
-
-.order .btn{
-	width: 100%;
-	padding: 0.5rem 1rem;
-	background-color: #CD9B1B;
-	color: #fff;
-	font-size: 1.1rem;
-	border: none;
-	outline: none;
-	cursor: pointer;
-	transition: .3s;
-}
-
-order.btn:hover{
-    background-color: #27ae60;
-    background-size: 20px;
-    height: 10pc;
-    width: 50pc;
-}
-
-.order.field:focus{
-    border: 2px solid rgba(30,85,250,0.47);
-    background-color: #fff;
-}
-
-@media screen and (max-width: 768px) {
-        .content {
-            width: 100%;
+		}
+		
+		
+		.order{
+            margin-top: 0px;
         }
-    }
-
-
+        
+        .order {
+            position: fixed;
+            width: auto;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            
+        }
+        .order .order:after{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 100px;
+            top: 20px;
+        
+            
+            
+        }
+        .order .order-box{
+            max-width: 50px;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background-color: #fff;
+            box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
+            float:right;
+        }
+        
+        .order .left{
+            background: url("../img/bg.jpg") no-repeat center;
+            background-size: cover;
+            height: 100%;
+        }
+        
+        .order .right{
+            padding: 25px 40px;
+        }
+        
+        .order h2{
+            position: relative;
+            padding: 0 0 10px;
+            margin-bottom: 10px;
+        }
+        
+        .order:focus h2:after{
+            content: '';
+            position: absolute;
+            left: 50%;
+            bottom: 0;
+            transform: translateX(-50%);
+            height: 4px;
+            width: 50px;
+            border-radius: 2px;
+            background-color: #CD9B1B;
+        }
+        
+        .order .field{
+            width: 100%;
+            border: 2px solid rgba(0, 0, 0, 0);
+            outline: none;
+            background-color: rgba(230, 230, 230, 0.6);
+            padding: 0.5rem 1rem;
+            font-size: 1.1rem;
+            margin-bottom: 22px;
+            transition: .3s;
+        }
+        
+        .order .field:hover{
+            background-color: rgba(0, 0, 0, 0.1);
+        }
+        
+        .order textarea{
+            min-height: 150px;
+        }
+        
+        .order .btn{
+            width: 100%;
+            padding: 0.5rem 1rem;
+            background-color: #CD9B1B;
+            color: #fff;
+            font-size: 1.1rem;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            transition: .3s;
+        }
+        
+        order.btn:hover{
+            background-color: #27ae60;
+            background-size: 20px;
+            height: 10pc;
+            width: 50pc;
+        }
+        
+        .order.field:focus{
+            border: 2px solid rgba(30,85,250,0.47);
+            background-color: #fff;
+        }
+        
+        @media screen and (max-width: 768px) {
+                .content {
+                    width: 100%;
+                }
+            }
