--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,335 +1,295 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
+:root{
+  --red:#ff8000;
+}
 *{
-    font-family: "Nunito",sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    outline: none;
-    border:none;
-    text-transform: capitalize;
-    transition: all .2s linear;
+  font-family: 'Nunito', sans-serif;
+  margin:0; padding:0;
+  box-sizing: border-box;
+  outline: none; border:none;
+  text-decoration: none;
+  text-transform: capitalize;
+  transition:all .2s linear;
 }
-    
-html{
-background-image: url(./images/19.jpg);
-background-size: cover;
-height: 280px;width: auto;
-background-repeat: no-repeat;
-background-attachment: scroll; 
-font-size:62.5%;
-overflow-x:hidden;
-scroll-behavior: smooth;
-
-/* Needed to position the navbar */
-position: relative;
-}
-
-
-
-/* The navbar */
-.navbar{
-    overflow: hidden;
-    background-color:lightgray;
-    margin-top: 10px;
-    top: 20px;
-    left: 2px;
-  }
-  
-  /* Navbar links */
-  .navbar {
-    float: right;
-    color: #ddd;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    padding-left: 80px;
-  }
-  
-  .navbar:hover {
-    background-color: #ddd;
-    
-  }
-
-
-
-
-section:nth-child(even){
-    background: #eee;
-}
-
-  
-.btn{
-    margin: top 1rem;
-    display: inline-block;
-    font-size: 1.7rem;
-    color:#fff;
-    background: var(--black);
-    border-radius: 5rem;
-    cursor:pointer;
-    padding:8rem 3rem;
-}
- .logo {background-image: ;
-    color:var(--green);
-    font-size: 2.6rem;
-    background-color:none;
-    float: start left;
-    top: 0%;
-    left: 0%;
-    margin-bottom: 100px;
-}
-.navbar {
-    font-size: 1.7rem;
-    border-radius: .5rem;
-    padding: .3rem 1.5rem;
-    color: var(--light-colour)
-    
-    }
-
-header .navbar a,
-header .navbar a{
-    font-family: "Nunito",sans-serif;
-    margin: 0;padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    outline: none;border:none;
-    text-transform: capitalize;
-    transition: all .2s linear;
-    
+*::selection{
+  background:var(--red);
+  color:#fff;
 }
 html{
-    
-font-size:62.5%;
-overflow-x:hidden;
-scroll-padding-top:5.5rem;
-
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  scroll-padding-top: 6rem;
 }
-section:nth-child(even){
-    background: #eee;
+body{
+  background:#f7f7f7;
 }
-#pop  > heading{
-    text-align: center;
-    font-size: xx-large;
-    color:#CD9B1B;
-	-webkit-text-stroke: 1px black;}
-.home{
-margin-top:680px
-
-}
-
-
-
-
-
-
-
-
-
-
-.services{
-    position: relative;
-    top: -125px;
-}
-.btn{
-    margin: top 1rem;
-    display: inline-block;
-    font-size: 1.7rem;
-    color:#fff;
-    background: var(--black);
-    border-radius: 5rem;
-    cursor:pointer;
-    padding:8rem 3rem;
-}
-
-
-
 section{
-    padding: 2rem  9%;
+  padding:2rem 9%;
 }
-section:nth-child(even){
-    background: #eee;
+.heading{
+  text-align: center;
+  font-size: 3.5rem;
+  padding:1rem;
+  color:#666;
 }
-header{ 
-
-position:fixed;
-top:0;left:0;right:0;
-background:#fff;
-padding: 1rem 7%;
-display: flex;
-align-items: center;
-justify-content:space-between;
-box-shadow: var(--box-shadow);
+.heading span{
+  color:var(--red);
 }
-header .navbar a{
+.btn{
+  display: inline-block;
+  padding:.8rem 3rem;
+  border:.2rem solid var(--red);
+  color:var(--red);
+  cursor: pointer;
+  font-size: 1.7rem;
+  border-radius: .5rem;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+  margin-top: 1rem;
+}
+.btn::before{
+  content: '';
+  position: absolute;
+  top:0; right: 0;
+  width:0%;
+  height:100%;
+  background:var(--red);
+  transition: .3s linear;
+  z-index: -1;
+}
+.btn:hover::before{
+  width:100%;
+  left: 0;
+}
+.btn:hover{
+  color:#fff;
+}
+header{
+    position: fixed;
+    top:0; left: 0; right:0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background:#fff;
+    padding:2rem 9%;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+  }
+  header .logo{
+    font-size: 2.5rem;
+    font-weight: bolder;
+    color:#666;
+  }
+  header .logo i{
+    padding-right: .5rem;
+    color:var(--red);
+  }
+  header .navbar a{
+    font-size: 2rem;
+    margin-left: 2rem;
+    color:#666;
+  }
+  header .navbar a:hover{
+    color:var(--red);
+  }
+  #menu-bar{
+    font-size: 3rem;
+    cursor: pointer;
+    color:#666;
+    border:.1rem solid #666;
+    border-radius: .3rem;
+    padding:.5rem 1.5rem;
+    display: none;
+  }
+  .home{
+    display: flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+    min-height: 100vh;
+    align-items: center;
+    background:url(../images/home-bg.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .home .content{
+    flex:1 1 40rem;
+    padding-top: 6.5rem;
+  }
+  .home .image{
+    flex:1 1 40rem;
+  }
+  .home .image img{
+    width:100%;
+    padding:1rem;
+    animation:float 3s linear infinite;
+  }
+  @keyframes float{
+    0%, 100%{
+      transform: translateY(0rem);
+    }
+    50%{
+      transform: translateY(3rem);
+    }
+  }
+  .home .content h3{
+    font-size: 5rem;
+    color:#333;
+  }
+  .home .content p{
     font-size: 1.7rem;
-    border-radius: .5rem;
-    padding: .5rem 1.5rem;
-    color: var(--light-colour);
-}
-header .navbar a.active,
-header .navbar a:hover{
-    color: #fff;
-    background: var(--green);
-}
-    hover{
-    color: #fff;
-    background: var(--green);
-
-}
-#img1{
+    color:#666;
+    padding:1rem 0;
+  }
+  .speciality .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+  }
+  .speciality .box-container .box{
+    flex:1 1 30rem;
     position: relative;
-}
-#home{
-    padding-top: 200px;
-    padding-bottom: 0%;}
-#home p{
-    text-align:center;
-	color:rgb(2, 1, 1);
-	-webkit-text-stroke: black;
-    font-size: medium;
-    padding-right: 50px;
-    font-size: 4rem;
-
-}
-
-    #services{
-padding-top:300px;}
-#services img{
-    border-radius: 40px;
-}
-    }
-    #services  h1{
-        padding-left: 50px;
-        font-size: 4rem;
-    }
-
-	<style>
-		body {
-			height: 100%;
-			font-family: Arial, sans-serif;
-		}
-		
-		* {
-			box-sizing: border-box;
-		}
-		
-		h1 {
-			text-align:center;
-			color:black
-			-webkit-text-stroke: 1px black;
-
-		}
-		
-		
-		.order{
-            margin-top: 0px;
-        }
-        
-        .order {
-            position: fixed;
-            width: auto;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            
-        }
-        .order .order:after{
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            left: 100px;
-            top: 20px;
-        
-            
-            
-        }
-        .order .order-box{
-            max-width: 50px;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            background-color: #fff;
-            box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
-            float:right;
-        }
-        
-        .order .left{
-            background: url("../img/bg.jpg") no-repeat center;
-            background-size: cover;
-            height: 100%;
-        }
-        
-        .order .right{
-            padding: 25px 40px;
-        }
-        
-        .order h2{
-            position: relative;
-            padding: 0 0 10px;
-            margin-bottom: 10px;
-        }
-        
-        .order:focus h2:after{
-            content: '';
-            position: absolute;
-            left: 50%;
-            bottom: 0;
-            transform: translateX(-50%);
-            height: 4px;
-            width: 50px;
-            border-radius: 2px;
-            background-color: #CD9B1B;
-        }
-        
-        .order .field{
-            width: 100%;
-            border: 2px solid rgba(0, 0, 0, 0);
-            outline: none;
-            background-color: rgba(230, 230, 230, 0.6);
-            padding: 0.5rem 1rem;
-            font-size: 1.1rem;
-            margin-bottom: 22px;
-            transition: .3s;
-        }
-        
-        .order .field:hover{
-            background-color: rgba(0, 0, 0, 0.1);
-        }
-        
-        .order textarea{
-            min-height: 150px;
-        }
-        
-        .order .btn{
-            width: 100%;
-            padding: 0.5rem 1rem;
-            background-color: #CD9B1B;
-            color: #fff;
-            font-size: 1.1rem;
-            border: none;
-            outline: none;
-            cursor: pointer;
-            transition: .3s;
-        }
-        
-        order.btn:hover{
-            background-color: #27ae60;
-            background-size: 20px;
-            height: 10pc;
-            width: 50pc;
-        }
-        
-        .order.field:focus{
-            border: 2px solid rgba(30,85,250,0.47);
-            background-color: #fff;
-        }
-        
-        @media screen and (max-width: 768px) {
-                .content {
-                    width: 100%;
-                }
-            }
+    overflow: hidden;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    border:.1rem solid rgba(0,0,0,.3);
+    cursor: pointer;
+    border-radius: .5rem;
+  }
+  .speciality .box-container .box .image{
+    height:100%;
+    width:100%;
+    object-fit: cover;
+    position: absolute;
+    top:-100%; left:0;
+  }
+  .speciality .box-container .box .content{
+    text-align: center;
+    background:#fff;
+    padding:2rem;
+  }
+  .speciality .box-container .box .content img{
+    margin:1.5rem 0;
+  }
+  .speciality .box-container .box .content h3{
+    font-size: 2.5rem;
+    color:#333;
+  }
+  .speciality .box-container .box .content p{
+    font-size: 1.6rem;
+    color:#666;
+    padding:1rem 0;
+  }
+  .speciality .box-container .box:hover .image{
+    top:0;
+  }
+  .speciality .box-container .box:hover .content{
+    transform: translateY(100%);
+  }
+  .popular .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+  }
+  .popular .box-container .box{
+    padding:2rem;
+    background:#fff;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    border:.1rem solid rgba(0,0,0,.3);
+    border-radius: .5rem;
+    text-align: center;
+    flex:1 1 30rem;
+    position: relative;
+  }
+  .popular .box-container .box img{
+    height:25rem;
+    object-fit: cover;
+    width:100%;
+    border-radius: .5rem;
+  }
+  .popular .box-container .box .price{
+    position: absolute;
+    top:3rem; left:3rem;
+    background:var(--red);
+    color:#fff;
+    font-size: 2rem;
+    padding:.5rem 1rem;
+    border-radius: .5rem;
+  }
+  .popular .box-container .box h3{
+    color:#333;
+    font-size: 2.5rem;
+    padding-top: 1rem;
+  }
+  .popular .box-container .box .stars i{
+    color:gold;
+    font-size: 1.7rem;
+    padding:1rem .1rem;
+  }
+  .order .row{
+    padding:2rem;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    background:#fff;
+    display: flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+    border-radius: .5rem;
+  }
+  .order .row .image{
+    flex:1 1 30rem;
+  }
+  .order .row .image img{
+    height: 100%;
+    width:100%;
+    object-fit: cover;
+    border-radius: .5rem;
+  }
+  .order .row form{
+    flex:1 1 50rem;
+    padding:1rem;
+  }
+  .order .row form .inputBox{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .order .row form .inputBox input, .order .row form textarea{
+    padding:1rem;
+    margin:1rem 0;
+    font-size: 1.7rem;
+    color:#333;
+    text-transform: none;
+    border:.1rem solid rgba(0,0,0,.3);
+    border-radius: .5rem;
+    width:49%;
+  }
+  .order .row form textarea{
+    width:100%;
+    resize: none;
+    height:15rem;
+  }
+  .order .row form .btn{
+    background:none;
+  }
+  .order .row form .btn:hover{
+    background:var(--red);
+  }
+  .footer{
+    background:#000;
+    text-align: center;
+  }
+  .footer .share{
+    display: flex;
+    gap:1.5rem;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .footer .credit{
+    padding:2.5rem 1rem;
+    color:#fff;
+    font-weight: normal;
+    font-size: 2rem;
+  }
+  .footer .credit span{
+    color:var(--red);
+  }
